# app

./: .webui_secret_key  1.json  1.txt  ADBCpost.txt  Adb.txt  AiEnv.txt  AiEnv环境.txt  Containerd-config.toml  Custom.mxtpro  DNS.txt  DeepAi.txt  DockerCrictlCtr.txt  Git.txt  JingYing.ipynb  KMS windows.txt  KMS激活.txt  Linux.txt  LinuxBase.md  LinuxBase.txt  NFS.text  Pipfile  Python环境.txt  TV.txt  VIPsoft.txt  aria2c.txt  barpl.ipynb  basic_sankey.html  container-mirror.ymal  data.xlsx  down.txt  el.xlsx  etf.ipynb  gd.xlsx  getStocksList.py  grid_geo_bar.html  grid_overlap_multi_xy_axis.html  haproxy.txt  harbor.txt  install-config.yaml  jupyter.txt  (+51 more)
2026旅行/: l.ipynb  pro.xlsx  明细.xlsx  项目明细统计结果.xlsx
Ai/: AI系统配置.txt  AiEnv环境.txt  BenchMark.txt  GTX.txt  Lanch.txt  LlamaCPP量化.txt  hf-mirror.txt  ollama.txt  xinference.txt
AiBase/: AI系统配置.txt  AiEnv环境.txt  FineTuning.txt  GTX.txt  Game.txt  PC.txt  ollama.txt  xinference.txt
AiStock/: --0.0多系统目录结构.md  --0.2026央企改革.md  --0.2026投资组合.ipynb  --0.2026投资组合.md  --0.基础计算.ipynb  --New行业财务健康度评分模型.ipynb  --产业链_产品.ipynb  --产业链_股指.ipynb  --基础计算.ipynb  --工具链_任务.md  --工具链选择.md  --市场状态量化系统 V5.5.ipynb  --市场状态量化系统 V5.6.ipynb  --市场状态量化系统 V5.7(重构).ipynb  --市场状态量化系统 V5.7(重构-MAX).html  --市场状态量化系统 V5.7(重构-MAX).ipynb  --市场状态量化系统 V5.7.ipynb  --波浪理论.ipynb  (+99 more)
AiStock/supply_chain_old/: REDAME.md  main.py  pyproject.toml
AiStock/supply_chain_old/config/: app_settings.yaml
AiStock/supply_chain_old/output/excel/: 关键指标对比.xlsx
AiStock/supply_chain_old/output/html/: 全景仪表盘.html
AiStock/supply_chain_old/src/visualizers/: sankey.py  timeline.py
(+3580 files in other folders)
