[project]
name = "fifteen-five-supply-chain"
version = "1.0.0"
description = "Visualization engine for China's 15th FYP Top 10 Investment Directions"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.1",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"